[gd_scene load_steps=4 format=3 uid="uid://de0tm4vkub3q1"]

[ext_resource type="Script" path="res://TargetSensor.gd" id="1_dxt65"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bsfhm"]
size = Vector3(3, 8, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_s5gdc"]
size = Vector3(4, 8, 10)

[node name="TargetingSystem" type="Node3D"]
script = ExtResource("1_dxt65")

[node name="CenterEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterEye"]
shape = SubResource("BoxShape3D_bsfhm")

[node name="LeftEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
shape = SubResource("BoxShape3D_s5gdc")

[node name="RightEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
shape = SubResource("BoxShape3D_s5gdc")
